--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.7.4",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
